--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
